--- a/Restaurant-Nutrition/IT358FinalProjKarthik-Prathibha/Base.lproj/Main.storyboard
+++ b/Restaurant-Nutrition/IT358FinalProjKarthik-Prathibha/Base.lproj/Main.storyboard
@@ -49,6 +49,15 @@
                     <view key="view" contentMode="scaleToFill" id="JfQ-FK-XRz">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Account Details" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1HK-9D-Mmc">
+                                <rect key="frame" x="147" y="125" width="120" height="32"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <viewLayoutGuide key="safeArea" id="48m-LT-gVr"/>
                     </view>
@@ -57,7 +66,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="f2G-um-3MG" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1145" y="0.0"/>
+            <point key="canvasLocation" x="1144.9275362318842" y="0.0"/>
         </scene>
         <!--Nutrition-->
         <scene sceneID="wg7-f3-ORb">
